# desktop-wordy-sunclock

./: AppRun  Coordinates.hs  Dock.hs  Gui.hs  Horatime.hs  NumbersToWords.hs  README.md  Switch to Dvorak keyboard layout  Swrapper.hs  TimeToHoratime.hs  TimeToString.hs  Utils.hs  clock.cabal  sunrise.c  tests.hs  theme.gtkrc
